docs/api/qiskit/0.24/qiskit.pulse.AcquireChannel.mdx
---
title: AcquireChannel
description: API reference for qiskit.pulse.AcquireChannel
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.AcquireChannel
---

<span id="qiskit-pulse-acquirechannel" />

# qiskit.pulse.AcquireChannel

<Class id="qiskit.pulse.AcquireChannel" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/pulse/channels.py" signature="AcquireChannel(index)" modifiers="class">
  Acquire channels are used to collect data.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  **Raises**

  [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If `index` is not a nonnegative integer.

  ### \_\_init\_\_

  <Function id="qiskit.pulse.AcquireChannel.__init__" signature="__init__(index)">
    Channel class.

    **Parameters**

    **index** (`int`) – Index of channel.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If `index` is not a nonnegative integer.
  </Function>

  ## Methods

  |                                                                                                   |                |
  | ------------------------------------------------------------------------------------------------- | -------------- |
  | [`__init__`](#qiskit.pulse.AcquireChannel.__init__ "qiskit.pulse.AcquireChannel.__init__")(index) | Channel class. |

  ## Attributes

  |                                                                                   |                                                                                    |
  | --------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------- |
  | [`index`](#qiskit.pulse.AcquireChannel.index "qiskit.pulse.AcquireChannel.index") | Return the index of this channel.                                                  |
  | [`name`](#qiskit.pulse.AcquireChannel.name "qiskit.pulse.AcquireChannel.name")    | Return the shorthand alias for this channel, which is based on its type and index. |
  | `prefix`                                                                          |                                                                                    |

  ### index

  <Function id="qiskit.pulse.AcquireChannel.index" signature="index" modifiers="property">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `int`
  </Function>

  ### name

  <Function id="qiskit.pulse.AcquireChannel.name" signature="name" modifiers="property">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Function>
</Class>

